// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header renders component correctly with title 1`] = `
<header
  className="header"
>
  <img
    alt="logo"
    className="App-logo"
    src="logo.svg"
  />
  <h1
    className="header-title"
  >
    Medical Image Series Viewer
  </h1>
</header>
`;

exports[`Header renders component without props 1`] = `
<header
  className="header"
>
  <img
    alt="logo"
    className="App-logo"
    src="logo.svg"
  />
  <h1
    className="header-title"
  />
</header>
`;
